# Personalized-Trip-Planner

./: .gitignore  Personalized Trip Planner.code-workspace  README.md  requirements.txt
agent/personalizedTripPlanner/: pyproject.toml
agent/personalizedTripPlanner/deployment/: deploy.py  test_deployment.py
agent/personalizedTripPlanner/personalized_trip_planner/: agent.py  prompt.py
agent/personalizedTripPlanner/personalized_trip_planner/subagents/Booking/: agent.py  prompt.py
agent/personalizedTripPlanner/personalized_trip_planner/subagents/Booking/tools/: tools.py
agent/personalizedTripPlanner/personalized_trip_planner/subagents/DataAggregator/: __init__.py  agent.py
agent/personalizedTripPlanner/personalized_trip_planner/subagents/Optimization/: __init__.py  agent.py
agent/personalizedTripPlanner/personalized_trip_planner/subagents/Personalization/: __init__.py  agent.py
agent/personalizedTripPlanner/personalized_trip_planner/subagents/Planning/: __init__.py  agent.py
agent/personalizedTripPlanner/personalized_trip_planner/subagents/RealtimeMonitoring/: __init__.py  agent.py
agent/personalizedTripPlanner/personalized_trip_planner/subagents/destinationSuggester/: __init__.py  agent.py
agent/personalizedTripPlanner/personalized_trip_planner/subagents/destinationSuggester/tools/: tools.py
backend/: env.example  main.py  requirements.txt  test_integration.py
docs/: .(draft) Implementation.md  .(draft) problem_statement.md  .draft_ps.md  Problem_Statement.md
frontend/: .env.local  package-lock.json  package.json  tailwind.config.js  (+1 more)
(+16 files in other folders)
